- Added EmailService and tests

--- a/src/main/resources/daily-digest-email.html
+++ b/src/main/resources/daily-digest-email.html
@@ -1,5 +1,3 @@
-<!-- FIXME: move to templatre folder -->
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:remove="all">Journals notification</title>
@@ -8,20 +6,21 @@
 <body>
 <p>
     Hello <span th:text="${user.loginName}">XXXX</span>
-
 </p>
 <p>
-    Below you have the jurnals published in the last 24 hours.
+    Below you have the journals published in the last 24 hours.
 <table>
     <tr>
         <th>Name</th>
         <th>Publisher</th>
         <th>Category</th>
+        <th>Publication date</th>
     </tr>
     <tr th:each="journal : ${journals}">
         <td th:text="${journal.name}">Onions</td>
-        <td th:text="${journal.publisher}">Onions</td>
-        <td th:text="${journal.category}">Onions</td>
+        <td th:text="${journal.publisher.name}">Onions</td>
+        <td th:text="${journal.category.name}">Onions</td>
+        <td th:text="${#dates.format(journal.publishDate, 'MMMM dd, yyyy')}">Onions</td>
     </tr>
 </table>
 </p>
