--- a/src/main/resources/new-journal-published-email.html
+++ b/src/main/resources/new-journal-published-email.html
@@ -8,11 +8,11 @@
 Hello <span th:text="${user.loginName}">XXXX</span>
 </p>
 <p>
-A new journal called <span th:text="${journal.name}">XXXX</span> has been published on <span th:text="${#dates.format(journal.publishDate, 'MMMM dd, yyyy')}">XXXX</span> by <span th:text="${journal.publisher.name}">XXXX</span> in category <span th:text="${journal.category.name}">XXXX</span>
+A new journal called <span th:text="${journal.name}">XXXX</span> has been published on <span th:text="${#dates.format(journal.publishDate, 'MMMM dd, yyyy')}">XXXX</span> by <span th:text="${journal.publisherName}">XXXX</span> in category <span th:text="${journal.categoryName}">XXXX</span>
 </p>
 <p>
     Regards, <br />
-    <em>The Crossover Team</em>
+    <em>The Medical Journals Team</em>
 </p>
 </body>
 </html>
